--- a/src/snippets/product-card.liquid
+++ b/src/snippets/product-card.liquid
@@ -20,21 +20,21 @@
   correctly (i.e. col-3).
 
 {% endcomment %}
-<div class="product-card mb-2">
-  <div class="mb-4">
+<div class="product-card mb-4 mb-md-5">
+  <div class="mb-3">
     <a href="{{ url | within: collection }}">
       {% render 'image-object',
                   id: id,
                   image_url_small: featured_image,
                   image_url_large: featured_image,
                   image_alt_text: title,
-                  image_aspect_ratio: '1by1 rounded'
+                  image_aspect_ratio: '1by1'
       %}
     </a>
   </div>
-  <div class="d-flex justify-content-between">
+  <div class="d-flex flex-column flex-md-row justify-content-between">
     <a href="{{ url | within: collection }}" class="link-unstyled">
-      <p class="mb-0 product-card-title">{{ title }}</p>
+      <p class="mb-0">{{ title }}</p>
       {% if excerpt != blank %}
         <p class="small">{{ excerpt }}</p>
       {% endif %}
@@ -59,5 +59,3 @@
     </p>
   </div>
 </div>
-
-
