Image mosiac data layer

--- a/src/sections/featured-collection.liquid
+++ b/src/sections/featured-collection.liquid
@@ -22,7 +22,7 @@
           { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
           { "value": "", "label": "100% wide at all breakpoints"}
         ],
-        "default": "container-fluid"
+        "default": "container-xl"
       },       
        {
         "type":   "range",
