--- a/src/sections/text-content.liquid
+++ b/src/sections/text-content.liquid
@@ -1,8 +1,8 @@
-{% render 'section-image-content' %}
+{% render 'section-text-content' %}
 
 {% schema %}
   {
-    "name": "Image & Content",
+    "name": "Text Content",
     "settings": [
       {
         "type": "header",
@@ -23,17 +23,6 @@
           { "value": "", "label": "100% wide at all breakpoints"}
         ],
         "default": "container-xl"
-      },      
-      { 
-        "type": "select",
-        "id": "content_order_large",
-        "label": "Content position",
-        "info": "Large devices only. On small devices, image stacks first and is followed by the content.",
-        "options": [
-          { "value": "order-lg-last", "label": "Right"},
-          { "value": "order-lg-first", "label": "Left"}
-        ],
-        "default": "order-lg-last"
       },
       {
         "type":   "range",
@@ -154,29 +143,7 @@
       {
         "type": "header",
         "content": "Content"
-      },
-      {
-        "type": "image_picker",
-        "id": "image",
-        "label": "Image - Small devices"
-      },     
-      {
-        "type": "image_picker",
-        "id": "image_large",
-        "label": "Image - Medium & Up devices"
-      },
-      {
-        "type": "select",
-        "id": "image_aspect_ratio",
-        "label": "Image aspect ratio",
-        "options": [
-          { "value": "21by9", "label": "21x9"},
-          { "value": "1by1", "label": "1x1"},
-          { "value": "4by3", "label": "4x3"},
-          { "value": "16by9", "label": "16x9"}
-        ],
-        "default": "1by1"
-      },                                 
+      },                            
       { 
         "type": "text",
         "id": "eyebrow_text",
@@ -318,7 +285,7 @@
     ],
     "presets": [
       {
-        "name": "Image & Content",
+        "name": "Text Content",
         "category": "Content"
       }
     ]
