--- a/src/snippets/section-featured-collection.liquid
+++ b/src/snippets/section-featured-collection.liquid
@@ -132,7 +132,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-12 col-md-4">
+      <div class="col-12 col-md-10 col-lg-6">
         {% render 'paragraph-text',
                     text: paragraph_text,
                     text_color: content_color
